Use w3 color scheme, fix border and alignment on table, formatting

--- a/Unit_4/Lesson_9/css/style.css
+++ b/Unit_4/Lesson_9/css/style.css
@@ -5,6 +5,14 @@
     --beige: #f3eee3;
     --light-grey: #e3e3e3;
     --dark-grey: #2D2D2A;
+    --green-neutral: #bad7a4;
+
+    --w3-color-scheme-light-green: #E3F7D4;
+    --w3-color-scheme-green: #66B032;
+    --w3-color-scheme-blue-teal: #347B98;
+    --w3-color-scheme-blue: #0247FE;
+    --w3-color-scheme-dark-blue: #091534;
+
     --header-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     --body-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -54,11 +62,11 @@ a:active {
 
 /* Custom styling */
 .body {
-    background-color: var(--beige);
+    background-color: var(--w3-color-scheme-light-green);
 }
 
 .header {
-    background-color: var(--red);
+    background-color: var(--w3-color-scheme-blue-teal);
     color: #fff;
 }
 
@@ -68,11 +76,11 @@ a:active {
 }
 
 .logo {
-  border-radius: 35%;
+    border-radius: 35%;
 }
 
 .topnav {
-    background-color: #333;
+    background-color: var(--w3-color-scheme-dark-blue);
     overflow: hidden;
 }
 
@@ -87,23 +95,23 @@ a:active {
 }
 
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: var(--w3-color-scheme-light-green);
     color: black;
     text-decoration: underline;
 }
 
 .topnav a.active {
-    background-color: var(--red);
+    background-color: var(--w3-color-scheme-blue-teal);
     color: white;
 }
 
 .topnav a.active:hover {
-    background-color: #ddd;
+    background-color: var(--w3-color-scheme-light-green);
     color: black;
 }
 
 .main {
-    background-color: var(--beige);
+    background-color: var(--w3-color-scheme-light-green);
     color: #000;
 }
 
@@ -119,7 +127,7 @@ a:active {
 }
 
 .content {
-    background-color: var(--light-grey);
+    background-color: var(--green-neutral);
     font-family: var(--body-font-family);
     border-radius: .65em;
 }
@@ -141,6 +149,19 @@ a:active {
 .award-table .award-table-caption {
     font-weight: 700;
     text-align: left;
+}
+
+.w3-striped tbody tr:nth-child(even) {
+    background-color: #d8ebc9;
+}
+
+.w3-hoverable tbody tr:hover,
+.w3-ul.w3-hoverable li:hover {
+    background-color: #b4c9b3;
+}
+
+.w3-border {
+    border: 1px solid #6d8374 !important;
 }
 
 .content .content-text {
@@ -216,7 +237,7 @@ a:active {
 }
 
 .footer {
-    background-color: var(--red);
+    background-color: var(--w3-color-scheme-blue-teal);
     color: #fff;
 }
 
